--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include neko/_layouts/*
-include neko/_posts/*
-include neko/_static/*
+recursive-include neko/_layouts *
+recursive-include neko/_posts *
+recursive-include neko/_static *
