--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,11 @@ python:
   - 3.6
 install:
   - pip install pep8
+  - pip install codecov
+  - pip install coveralls
 script:
   - pep8 .
+  - coverage run --source=src setup.py test
+after_success:
+  - coveralls
+  - codecov
