--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install coveralls
 script:
   - pep8 .
-  - coverage run --source=src setup.py test
+  - coverage run --source=neko setup.py test
 after_success:
   - coveralls
   - codecov
