--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ python:
   - 3.5
   - 3.6
 install:
-  - pip install pep8
+  - pip install pycodestyle
   - pip install codecov
   - pip install coveralls
 script:
-  - pep8 .
+  - pycodestyle .
   - coverage run --source=neko setup.py test
 after_success:
   - coveralls
